[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_budget"
version = "0.1.0"
dependencies = [
    "click",
    "streamlit",
]

# This tells Python to look inside the 'python' folder for your package
[tool.setuptools.packages.find]
where = ["python"]